--- a/package.json
+++ b/package.json
@@ -3,16 +3,18 @@
     "test": "jest"
   },
   "devDependencies": {
+    "eslint": "^7.0.0",
+    "eslint-plugin-react": "^7.20.0",
     "jest": "^26.0.1",
     "node-fetch": "^2.6.0",
     "prettier": "2.0.5"
-  },
-  "dependencies": {
-    "@types/jest": "^25.2.2"
   },
   "jest": {
     "setupFiles": [
       "./setupJest.js"
     ]
+  },
+  "dependencies": {
+    "@types/jest": "^25.2.3"
   }
 }
