--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     },
     "dependencies": {
         "@types/jest": "^25.2.3",
-        "eslint-plugin-prettier": "^3.1.3"
+        "eslint-plugin-prettier": "^3.1.3",
+        "algorithm-cli": "./algorithm-cli"
     }
 }
