--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     },
     "dependencies": {
         "@types/jest": "^25.2.3",
-        "eslint-plugin-prettier": "^3.1.3",
-        "algorithm-cli": "./algorithm-cli"
+        "eslint-plugin-prettier": "^3.1.3"
     }
 }
