--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     },
     "dependencies": {
         "@types/jest": "^25.2.3",
+        "common-algorithms": "./common-algorithms",
         "eslint-plugin-prettier": "^3.1.3"
     }
 }
